--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -14,13 +14,16 @@ $ignored-selectors: 'img, h2, h3, h4, h5, h6, #{$class}__section, #{$class}__hea
 
 // Defaults
 $aspect-ratio: '3/2';
-$spacing-x: spacing(14);
-$spacing-y: spacing(16);
+
+$spacing-x: fluid-spacing(14);
+$spacing-y: fluid-spacing(16);
+
+$font-size: font-size(sm);
+$text-leading: text-leaidng(sm);
 
 $border-color: fill(brd, 1);
-$border-radius: radius(lg);
+$border-radius: radius(config.default(radius));
 
-$font-size: sm;
 $body-background: fill(srf, 1);
 $body-foreground: fill(txt, 2);
 
@@ -29,40 +32,32 @@ $body-foreground: fill(txt, 2);
 // --------------------------------
 
 @mixin card {
-  --koi-img-aspect-ratio: 3/2;
-  --koi-card-spacing-x: #{fluid-spacing($spacing-x)};
-  --koi-card-spacing-y: #{fluid-spacing($spacing-y)};
-  --koi-card-gap: #{$spacing-y};
-  --koi-card-border-color: #{$border-color};
-  --koi-card-border-width: 0;
-  --koi-card-inner-border-color: #{$border-color};
-  --koi-card-inner-border-width: 1px;
-  --koi-card-body-background: #{$body-background};
-  --koi-card-body-foreground: #{$body-foreground};
-  --koi-card-font-size: #{font-size($font-size)};
-  --koi-card-leading: #{text-leading($font-size)};
-
-  @include box($foreground: var(--koi-card-body-foreground), $rounded: $border-radius, $shadow: md);
-  border-width: var(--koi-card-border-width);
+  @include box(
+    $background: var(--koi-card-body-background, $body-background),
+    $foreground: var(--koi-card-body-foreground, $body-foreground),
+    $rounded: $border-radius,
+    $shadow: md
+  );
+  border-color: var(--koi-card-border-color, $border-color);
+  border-width: var(--koi-card-border-width, 0);
   display: flex;
   flex-direction: column;
-  gap: var(--koi-card-gap);
+  gap: var(--koi-card-gap, $spacing-y);
 
   &__section,
   &__header,
-  &__content,
   &__footer {
     display: flex;
-    font-size: var(--koi-card-font-size);
-    line-height: var(--koi-card-leading);
+    font-size: var(--koi-card-font-size, $font-size);
+    line-height: var(--koi-card-leading, $text-leading);
     position: relative;
 
     &--border {
-      border-color: var(--koi-card-inner-border-color);
-      border-top-width: var(--koi-card-inner-border-width);
-      padding-left: var(--koi-card-spacing-x);
-      padding-right: var(--koi-card-spacing-x);
-      padding-top: var(--koi-card-spacing-y);
+      border-color: var(--koi-card-inner-border-color, $border-color);
+      border-top-width: var(--koi-card-inner-border-width, 1px);
+      padding-left: var(--koi-card-spacing-x, $spacing-x);
+      padding-right: var(--koi-card-spacing-x, $spacing-x);
+      padding-top: var(--koi-card-spacing-y, $spacing-y);
     }
   }
 
@@ -73,15 +68,15 @@ $body-foreground: fill(txt, 2);
   }
 
   &__content {
-    color: var(--koi-card-body-foreground);
+    color: var(--koi-card-body-foreground, $body-foreground);
   }
 
-  > *:last-of-type:not(#{$ignored-selectors}) {
-    margin-bottom: var(--koi-card-spacing-y);
+  & > *:last-of-type:not(#{$ignored-selectors}) {
+    margin-bottom: var(--koi-card-spacing-y, $spacing-y);
   }
 
-  > img {
-    aspect-ratio: var(--koi-img-aspect-ratio);
+  & > img {
+    aspect-ratio: var(--koi-img-aspect-ratio, 3/2);
     object-fit: cover;
     width: 100%;
 
@@ -95,16 +90,16 @@ $body-foreground: fill(txt, 2);
     }
   }
 
-  > *:not(img, #{$class}__section--border) {
-    margin-left: var(--koi-card-spacing-x);
-    margin-right: var(--koi-card-spacing-x);
+  & > *:not(img, #{$class}__section--border) {
+    margin-left: var(--koi-card-spacing-x, $spacing-x);
+    margin-right: var(--koi-card-spacing-x, $spacing-x);
   }
 
-  > *:not(img):first-child {
-    margin-top: var(--koi-card-spacing-y);
+  & > *:not(img):first-child {
+    margin-top: var(--koi-card-spacing-y, $spacing-y);
   }
 
-  > a {
+  & > a {
     align-self: start;
   }
 }
