--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -34,7 +34,7 @@ $defaults: map.deep-merge(
     font-weight: normal,
     layer: base,
     leading: normal,
-    radius: md,
+    radius: lg,
     shadow: md,
     timing: ease,
     tracking: normal,
