--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -94,77 +94,50 @@ $padding-x-wide: spacing(80);
 }
 
 @mixin default {
-  --koi-btn-align-items: center;
-  --koi-btn-background: #{fill(srf, 1)};
-  --koi-btn-border-color: #{fill(brd, 1)};
-  --koi-btn-border-radius: #{$border-radius};
-  --koi-btn-border-style: solid;
-  --koi-btn-border-width: #{$border-width};
-  --koi-btn-foreground: #{fill(txt, 1)};
-  --koi-btn-display: inline-flex;
-  --koi-btn-font-size: #{$font-size};
-  --koi-btn-font-weight: #{font(semibold)};
-  --koi-btn-gap: 1ch;
-  --koi-btn-justify-content: center;
-  --koi-btn-tracking: #{$tracking};
-  --koi-btn-height: #{$height};
-  --koi-btn-leading: #{$leading};
-  --koi-btn-padding-x: #{$padding-x};
-  --koi-btn-text-align: center;
-  --koi-btn-text-transform: capitalize;
-  --koi-btn-animation-scale: 1px;
-  --koi-btn-background-hover: #{fill(srf, 2)};
-  --koi-btn-foreground-hover: #{fill(txt, 1)};
-  --koi-btn-background-active: #{fill(srf, 1)};
-  --koi-btn-foreground-active: #{fill(txt, 1)};
-  --koi-btn-background-disabled: #{fill(srf, 3, $alpha: 0.4)};
-  --koi-btn-foreground-disabled: #{fill(txt, 3)};
-  --koi-btn-border-color-disabled: transparent;
-
   @include shadow(xs);
   @include focus-ring;
   @include transition((color, background-color, border-color, box-shadow, transform));
 
-  align-items: var(--koi-btn-align-items);
-  background-color: var(--koi-btn-background);
-  border-color: var(--koi-btn-border-color);
-  border-radius: var(--koi-btn-border-radius);
-  border-style: var(--koi-btn-border-style);
+  align-items: var(--koi-btn-align-items, center);
+  background-color: var(--koi-btn-background, fill(srf, 1));
+  border-color: var(--koi-btn-border-color, fill(brd, 1));
+  border-radius: var(--koi-btn-border-radius, $border-radius);
+  border-style: var(--koi-btn-border-style, solid);
   border-width: 1px;
-  color: var(--koi-btn-foreground);
-  display: var(--koi-btn-display);
-  font-size: var(--koi-btn-font-size);
-  font-weight: var(--koi-btn-font-weight);
-  gap: var(--koi-btn-gap);
-  height: var(--koi-btn-height);
-  justify-content: var(--koi-btn-justify-content);
-  letter-spacing: var(--koi-btn-tracking);
-  line-height: var(--koi-btn-leading);
-  padding: 0 var(--koi-btn-padding-x);
-  text-align: var(--koi-btn-text-align);
-  text-transform: var(--koi-btn-text-transform);
+  color: var(--koi-btn-foreground, fill(txt, 1));
+  display: var(--koi-btn-display, inline-flex);
+  font-size: var(--koi-btn-font-size, $font-size);
+  font-weight: var(--koi-btn-font-weight, font(semibold));
+  gap: var(--koi-btn-gap, 1ch);
+  height: var(--koi-btn-height, $height);
+  justify-content: var(--koi-btn-justify-content, center);
+  letter-spacing: var(--koi-btn-tracking, $tracking);
+  line-height: var(--koi-btn-leading, $leading);
+  padding: 0 var(--koi-btn-padding-x, $padding-x);
+  text-align: var(--koi-btn-text-align, center);
+  text-transform: var(--koi-btn-text-transform, capitalize);
 
   @include hover {
-    background-color: var(--koi-btn-background-hover);
-    color: var(--koi-btn-foreground-hover);
+    background-color: var(--koi-btn-background-hover, fill(srf, 2));
+    color: var(--koi-btn-foreground-hover, fill(txt, 1));
   }
 
   @include active {
     @include shadow(none);
 
     @if config.$use-button-animation {
-      transform: translateY(var(--koi-btn-animation-scale));
+      transform: translateY(var(--koi-btn-animation-scale, 1px));
     } @else {
-      background-color: var(--koi-btn-background-active);
-      color: var(--koi-btn-foreground-active);
+      background-color: var(--koi-btn-background-active, fill(srf, 1));
+      color: var(--koi-btn-foreground-active, fill(txt, 1));
     }
   }
 
   @include disabled {
-    background-color: var(--koi-btn-background-disabled);
-    border-color: var(--koi-btn-border-color-disabled);
+    background-color: var(--koi-btn-background-disabled, fill(srf, 3, $alpha: 0.4));
+    border-color: var(--koi-btn-border-color-disabled, transparent);
     box-shadow: none;
-    color: var(--koi-btn-foreground-disabled);
+    color: var(--koi-btn-foreground-disabled, fill(txt, 3));
     cursor: not-allowed;
   }
 
@@ -190,7 +163,7 @@ $padding-x-wide: spacing(80);
   --koi-btn-foreground-hover: #{fill(cnt, 1)};
   --koi-btn-foreground-active: #{fill(cnt, 0)};
 
-  border-width: var(--koi-btn-border-width);
+  border-width: var(--koi-btn-border-width, 2px);
 
   // Color variants
   @include color-variant(accent) {
@@ -229,7 +202,7 @@ $padding-x-wide: spacing(80);
   --koi-btn-foreground-active: #{fill(cnt, 9)};
   --koi-shadow: #{shadow(none)};
 
-  border-width: var(--koi-btn-border-width);
+  border-width: var(--koi-btn-border-width, 2px);
 
   @include dark-mode {
     --koi-btn-background-hover: #{fill(cnt, 2)};
@@ -299,7 +272,7 @@ $padding-x-wide: spacing(80);
   --koi-btn-foreground-active: #{fill(cnt, 8)};
   --koi-shadow: #{shadow(none)};
 
-  border-width: var(--koi-btn-border-width);
+  border-width: var(--koi-btn-border-width, 2px);
 
   @include dark-mode {
     --koi-btn-background: #{fill(cnt, 2)};
@@ -362,7 +335,7 @@ $padding-x-wide: spacing(80);
   --koi-btn-foreground-active: #{fill(cnt, 8)};
   --koi-shadow: #{shadow(none)};
 
-  border-width: var(--koi-btn-border-width);
+  border-width: var(--koi-btn-border-width, 2px);
 
   @include dark-mode {
     --koi-btn-background-hover: #{fill(cnt, 2, $alpha: 0.75)};
@@ -420,7 +393,7 @@ $padding-x-wide: spacing(80);
   --koi-btn-foreground-active: #{fill(cnt, 8)};
   --koi-shadow: #{shadow(none)};
 
-  border-width: var(--koi-btn-border-width);
+  border-width: var(--koi-btn-border-width, 2px);
 
   @include hover {
     text-decoration: underline;
